# zebra-pass

./: .gitignore  Cargo.toml  build.rs
i18n/en/: zebra_pass.ftl
i18n/ru/: zebra_pass.ftl
src/: errors.rs  lib.rs  localize.rs  main.rs
src/app/: app.rs  fonts.rs  message.rs  mod.rs  router.rs  theme.rs
src/app/components/: mod.rs  zbutton.rs  zebra_print.rs
src/app/pages/: locale.rs
src/app/style/: button.rs  mod.rs
src/backend/: guard.rs  hander.rs  handler.rs  mod.rs  state.rs
src/background/: bip39.rs  core.rs  mod.rs
src/bip39/: config.rs  errors.rs  m.rs  mnemonic.rs  mod.rs
src/bip39/language/: english.rs  mod.rs
src/cipher/: mod.rs
src/config/: app.rs
src/core/: bip39.rs  core.rs  mod.rs  passgen.rs  record.rs
src/guard/: mod.rs
src/keychain/: errors.rs  keys.rs  mod.rs  pq.rs  session.rs
src/records/: address.rs  identity.rs
src/settings/: appearance.rs  cipher.rs  language.rs  mod.rs  settings.rs
src/state/: address.rs  card.rs  login.rs  mod.rs  records.rs  state.rs  swift.rs
src/storage/: db.rs  errors.rs  keys.rs  mod.rs
ui/: logic.slint  main.slint  route.slint  routers.slint  theme.slint
ui/components/: add-record.slint  button.slint  combo-box.slint  combo_box.slint  element.slint  field.slint  icon-btn.slint  icon-wrap.slint  input.slint  item-field.slint  label.slint  leftbar.slint  link.slint  login.slint  mnemonic-gen.slint  pass-gen-form.slint  reload.slint  reload_btn.slint  search.slint  tag.slint  topbar.slint
ui/icons/: gear.slint  hide_eye.slint  icons.slint  lock.slint
ui/pages/: create.slint  home.slint  lang_choose.slint  lock.slint  login.slint  mnemonic.slint  pages.slint  privacy.slint  setup_account.slint  start.slint
ui/sub-page/: add-record.slint  manage.slint  pages.slint  passgen.slint  settings.slint
zebra-gui/: Cargo.toml
zebra-gui/src/: main.rs
zebra-gui/ui/: Cargo.toml
zebra-lib/: Cargo.toml
zebra-lib/src/: lib.rs
zebra-lib/src/bip39/: config.rs  mod.rs
zebra-lib/src/config/: mod.rs
zebra-lib/src/keychain/: mod.rs
zebra-lib/src/records/: card.rs  crypto.rs  field.rs
zebra-lib/src/settings/: mod.rs
zebra-lib/src/state/: mod.rs
zebra-lib/src/storage/: mod.rs
zebra-ui/src/: color.rs  fonts.rs  image.rs  lib.rs  theme.rs
zebra_gui/: Cargo.toml
zebra_gui/locales/: en.yml  ru.yml
zebra_gui/src/: error.rs  gui.rs  main.rs
zebra_gui/src/app/: mod.rs
zebra_gui/src/app/state/: message.rs  mod.rs
zebra_gui/src/app/view/: loader.rs  message.rs  mod.rs
zebra_gui/src/components/: add_login.rs  add_record_from.rs  custom_field.rs  general_settings.rs  home_nav_bar.rs  mod.rs  modal.rs  passgen.rs  phrasegen.rs  profile_view.rs  select_list.rs  smart_field.rs  smart_input.rs
zebra_gui/src/config/: categories.rs  mod.rs
zebra_gui/src/pages/: add_record.rs  error.rs  gen.rs  gen_phrase.rs  home.rs  inverview.rs  loader.rs  locale.rs  lock.rs  mod.rs  options.rs  password_setup.rs  restore.rs  settings.rs
zebra_lib/: Cargo.toml
zebra_lib/src/: errors.rs  lib.rs
zebra_lib/src/bip39/: mnemonic.rs
zebra_lib/src/core/: core.rs  email.rs  mod.rs  passgen.rs  password_strength.rs  record.rs
zebra_lib/src/guard/: mod.rs
zebra_lib/src/keychain/: keys.rs
zebra_lib/src/records/: mod.rs  records.rs
zebra_lib/src/settings/: appearance.rs  cipher.rs  language.rs  mod.rs  settings.rs
zebra_lib/src/state/: mod.rs  state.rs
zebra_lib/src/storage/: db.rs
zebra_lib/src/utils/: mod.rs
zebra_ui/: Cargo.toml
zebra_ui/src/: color.rs  config.rs  fonts.rs  image.rs  lib.rs  theme.rs
zebra_ui/src/components/: circular.rs  easing.rs  line.rs  mod.rs
zebra_ui/src/style/: application.rs  button.rs  checkbox.rs  container.rs  mod.rs  pick_list.rs  radio.rs  scrollable.rs  slider.rs  svg.rs  text.rs  text_input.rs
zebra_ui/src/styles/: button.rs  container.rs  input.rs  line.rs  menu.rs  mod.rs  pick_list.rs  scrollable.rs  svg.rs  text.rs  text_editor.rs
