[package]
name = "zebra-pass"
version = "0.0.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/zebra-sh/zebra-pass"
license = "GPL-3"
authors = ["Rinat.H <hicc0rus@gmail.com>"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "zebra-lib",
]

[dependencies]
