[package]
name = "zebra-pass"
version = "0.0.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/zebra-sh/zebra-pass"
license = "GPL-3"
authors = ["Rinat.H <hicc0rus@gmail.com>"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "zebra_lib",
    "zebra_gui",
    "zebra_ui"
]

[[bin]]
name = "zebra_gui"
path = "zebra_gui/src/main.rs"

[dependencies]
#iced = { version = "0.10.0", default-features= false, features = ["svg", "image", "lazy", "advanced", "canvas"] }
iced = { git = "https://github.com/hicaru/iced.git", default-features= false, features = ["svg", "image", "lazy", "advanced", "palette"] }
iced_lazy = "0.6"
rust-i18n = "2.3.0"
chrono = "0.4.31"
dark-light = "1.0.0"

zebra_ui = { path = "zebra_ui" }
zebra_lib = { path = "zebra_lib" }
tokio = {version = "1.34.0", features = ["signal"]}
rand = { version = "0.8.5", features = ["small_rng"] }
lyon_algorithms = "1.0.4"
iced_wgpu = "0.10"
