[package]
name = "zebra_gui"
version = "0.1.0"
edition = "2021"
license = "GPL-3"
authors = ["Rinat.H <hicc0rus@gmail.com>"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zebra_ui = { path = "../zebra_ui" }
zebra_lib = { path = "../zebra_lib" }
tokio = {version = "1.34.0", features = ["signal"]}
rust-i18n = "2.3.0"
iced_native = "0.10.3"
iced = { version = "0.10.0", default-features= false, features = ["svg", "image", "lazy"] }
dark-light = "1.0.0"
