[package]
name = "zebra_gui"
version = "0.1.0"
edition = "2021"
license = "GPL-3"
authors = ["Rinat.H <hicc0rus@gmail.com>"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zebra_ui = { path = "../zebra_ui" }
zebra_lib = { path = "../zebra_lib" }
tokio = { version = "1.34.0", features = ["signal", "fs"] }
rust-i18n = "3.0.1"
iced = { git = "https://github.com/hicaru/iced.git", default-features = false, features = [
  "svg",
  "image",
  "lazy",
  "wgpu",
] }
iced_wgpu = "0.12.1"
dark-light = "1.0.0"
rand = { version = "0.8.5", features = ["small_rng"] }
chrono = "0.4.38"
rfd = "0.13"
dirs = "5.0.1"
