[package]
name = "zebra_ui"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hicaru/iced.git", default-features = false, features = [
  "svg",
  "image",
  "lazy",
  "advanced",
  "canvas",
  "wgpu",
] }
lyon_algorithms = "1.0.4"
iced_wgpu = "0.12.1"
